# archi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTES.md  README.md  cog.toml
.github/workflows/: deploy.yml  release.yml
.hooks/: pre-commit
src/: actions.rs  config.json  config.toml  installer.rs  main.rs  setup.rs  utils.rs
src/installer/: disk.rs  disk_partition.rs  env.rs  format.rs  format_partitions.rs  fstab.rs  grub.rs  mkinitcpio.rs  mount_partitions.rs  mount_subvolumes.rs  network.rs  packages.rs  partitioning.rs  swap.rs  time.rs  umount_partitions.rs  user.rs
src/setup/: facts.rs  questions.rs  questions_theme.rs
src/setup/facts/: disks.rs  firmware_interface.rs  timezone.rs
src/setup/questions/: confirm.rs  disk.rs  editor.rs  hostname.rs  kernel.rs  swap_size.rs  timezone.rs  user.rs
src/utils/: cmd.rs  disk.rs  file.rs  input.rs  message.rs  render_config.rs
