[package]
name = "archi"
version = "1.3.0"
authors = ["Vyacheslav Shimarulin <shimarulin@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Release optimization
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'

[dependencies]
console = "0.14.1"
inquire = "0.0.7-alpha.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
